[gd_scene load_steps=9 format=3 uid="uid://dpgxir70w4mvm"]

[ext_resource type="Script" uid="uid://t8qalxc5de2l" path="res://Nodi/Scene Swapper/scene_swapper.gd" id="1_g4dag"]
[ext_resource type="Texture2D" uid="uid://bqvyolf13kpi5" path="res://Sprite/Freccia.png" id="2_g4dag"]

[sub_resource type="Gradient" id="Gradient_k774i"]
colors = PackedColorArray(0, 0, 0, 0.717647, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_cshlo"]
gradient = SubResource("Gradient_k774i")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mqgwt"]
transparency = 1
blend_mode = 3
cull_mode = 1
shading_mode = 0
diffuse_mode = 3
albedo_texture = SubResource("GradientTexture1D_cshlo")

[sub_resource type="BoxMesh" id="BoxMesh_b8p41"]
material = SubResource("StandardMaterial3D_mqgwt")

[sub_resource type="BoxShape3D" id="BoxShape3D_jtnrs"]
size = Vector3(3.7002, 1, 3.08008)

[sub_resource type="BoxShape3D" id="BoxShape3D_v03jo"]
size = Vector3(0.525879, 1, 1)

[node name="SceneSwapper" type="Node3D"]
script = ExtResource("1_g4dag")
direzione = 60

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1.90633, 8.74228e-08, 0, 7.28477e-15, 4.37114e-08, -1, -1.66656e-07, -1, -4.37114e-08, 0.430206, 0, 0)
visible = false
mesh = SubResource("BoxMesh_b8p41")

[node name="Freccia" type="Sprite3D" parent="."]
transform = Transform3D(6.05485e-07, 4.39087, -2.53507, -2.21623e-07, -2.53507, -4.39087, -5.07014, 6.35177e-07, -1.10811e-07, 0, 0.20306396, 0)
alpha_cut = 1
texture_filter = 2
texture = ExtResource("2_g4dag")

[node name="AreaFreccia" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaFreccia"]
transform = Transform3D(1, -7.6368e-09, 9.54593e-09, 7.6368e-09, 1, -6.37943e-08, -9.54593e-09, 6.37943e-08, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_jtnrs")

[node name="AreaTeletrasporto" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AreaTeletrasporto"]
transform = Transform3D(1, -1.09545e-08, 9.54577e-09, 1.09545e-08, 1, -8.14891e-08, -9.54576e-09, 8.14891e-08, 1, 0.237067, 1.9013e-09, -2.15368e-09)
shape = SubResource("BoxShape3D_v03jo")

[connection signal="body_entered" from="AreaFreccia" to="." method="_on_area_freccia_body_entered"]
[connection signal="body_exited" from="AreaFreccia" to="." method="_on_area_freccia_body_exited"]
[connection signal="body_entered" from="AreaTeletrasporto" to="." method="_on_area_teletrasporto_body_entered"]
